# bq_mcp_server

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  ChangeLog.md  README-ja.md  README.md  client.py  design.md  format.sh  pyproject.toml  requirements.txt
.claude/commands/: bq-mcp-test.md
.github/workflows/: ci.yml  claude.yml
bq_mcp/adapters/: agent.py  bq_agent_gradio.py  mcp_server.py  web.py
bq_mcp/core/: async_funcs.py  converter.py  entities.py  logic.py  logic_base.py  query_parser.py
bq_mcp/repositories/: bigquery_client.py  cache_manager.py  config.py  log.py  logic.py  query_executor.py  search_engine.py
bq_mcp_server/: __init__.py
bq_mcp_server/adapters/: mcp_server.py  web.py
bq_mcp_server/core/: converter.py  entities.py  file_exporter.py  logic_base.py  query_parser.py
bq_mcp_server/repositories/: bigquery_client.py  cache_manager.py  config.py  log.py  logic.py  query_executor.py  search_engine.py
bq_meta_api/: __init__.py  agent.py  bigquery_client.py  bq_agent_gradio.py  cache_manager.py  config.py  converter.py  log.py  logic.py  main.py  mcp.py  mcp_server.py  models.py  search_engine.py  start.py
bq_meta_api/adapters/: agent.py  bq_agent_gradio.py  mcp_server.py  web.py
bq_meta_api/application/: __init__.py
bq_meta_api/application/services/: __init__.py  fetch_bigquery_table_metadata_service.py  list_datasets_service.py
bq_meta_api/core/: converter.py  entities.py  logic.py  query_parser.py
bq_meta_api/domain/: __init__.py  entities.py
bq_meta_api/domain/entities/: __init__.py
bq_meta_api/domain/repositories/: __init__.py  bigquery_repository.py  cache_repository.py  search_repository.py
bq_meta_api/domain/use_cases/: __init__.py  interfaces.py
bq_meta_api/infrastructure/: __init__.py
bq_meta_api/infrastructure/bigquery/: __init__.py  client.py
bq_meta_api/infrastructure/cache/: __init__.py  cache_manager.py
bq_meta_api/infrastructure/search/: __init__.py  search_engine.py
bq_meta_api/repositories/: bigquery_client.py  cache_manager.py  config.py  log.py  query_executor.py  search_engine.py
docs/: clean_architecture_plan.md  clean_architecture_plan_ja.md  dependency_injection_design.md  query-plan.md  settings.ja.md  settings.md
scripts/: generate_env_example.py  generate_settings_docs.py
tests/: test_bigquery_client.py  test_converter.py  test_converter_limit_notification.py  test_dataset_filters.py  test_entities_limit_info.py  test_execute_query_no_limit.py  test_file_exporter.py  test_logic.py  test_logic_base.py  test_logic_repositories.py  test_mcp_server.py  test_query_executor.py  test_query_executor_limit_info.py  test_query_executor_skip_limit.py  test_query_parser.py  test_query_parser_smart_limit.py  test_save_query_result.py  test_save_query_result_integration.py  test_search_engine.py
tests/application/services/: test_list_datasets_service.py
