[project]
name = "bigquery-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "google-cloud-bigquery>=3.31.0",
    "gradio>=4.26.0",
    "pydantic-ai>=0.1.4",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "lizard>=1.17.31",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=bq_meta_api --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["bq_meta_api"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
