[project]
name = "bq_mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "gcloud-aio-bigquery>=7.1.0",
    "google-cloud-bigquery>=3.31.0",
    "gradio>=4.26.0",
    "mcp[cli]>=1.6.0",
    "pydantic-ai>=0.1.4",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "lizard>=1.17.31",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.7",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.scripts]
mcp_server = "bq_mcp.adapters.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=bq_mcp --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["bq_mcp"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == '__main__':",
]
